Création bundle PlateformBunde et configuration

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+sp_plateform:
+    resource: "@SPPlateformBundle/Resources/config/routing.yml"
+    prefix:   /plateform
+
 sp_core:
     resource: "@SPCoreBundle/Resources/config/routing.yml"
     prefix:   /
